tdf#132924 - Firebird findColumn: return column alias if specified

The function findColumn in a Basic macro should also find aliases for
columns specified in an SQL query using a Firebird database.

Change-Id: I96adb2564da1e18cee58f1c6803526d8ff4deabb