dbaccess/qa/unit/firebird.cxx
@@ -27,10 +27,12 @@ class FirebirdTest
 public:
     void testEmptyDBConnection();
     void testIntegerDatabase();
+    void testTdf132924();
 
     CPPUNIT_TEST_SUITE(FirebirdTest);
     CPPUNIT_TEST(testEmptyDBConnection);
     CPPUNIT_TEST(testIntegerDatabase);
+    CPPUNIT_TEST(testTdf132924);
     CPPUNIT_TEST_SUITE_END();
 };
 
@@ -86,6 +88,32 @@ void FirebirdTest::testIntegerDatabase()
         xRow->getString(xColumnLocate->findColumn("_VARCHAR")));
 
     CPPUNIT_ASSERT(!xResultSet->next()); // Should only be one row
+
+    closeDocument(uno::Reference<lang::XComponent>(xDocument, uno::UNO_QUERY));
+}
+
+void FirebirdTest::testTdf132924()
+{
+    uno::Reference<XOfficeDatabaseDocument> xDocument = getDocumentForFileName(u"tdf132924.odb");
+    uno::Reference<XConnection> xConnection = getConnectionForDocument(xDocument);
+
+    uno::Reference<XStatement> xStatement = xConnection->createStatement();
+    CPPUNIT_ASSERT(xStatement.is());
+
+    uno::Reference<XResultSet> xResultSet = xStatement->executeQuery("SELECT * FROM AliasTest");
+    CPPUNIT_ASSERT(xResultSet.is());
+    CPPUNIT_ASSERT(xResultSet->next());
+
+    uno::Reference<XRow> xRow(xResultSet, UNO_QUERY);
+    CPPUNIT_ASSERT(xRow.is());
+    uno::Reference<XColumnLocate> xColumnLocate(xRow, UNO_QUERY);
+    CPPUNIT_ASSERT(xColumnLocate.is());
+
+    // Without the fix in place, this test would have failed with:
+    // - Expected: 1
+    // - Actual  : The column name 'TestId' is not valid
+    CPPUNIT_ASSERT_EQUAL(sal_Int16(1), xRow->getShort(xColumnLocate->findColumn("TestId")));
+    CPPUNIT_ASSERT_EQUAL(OUString("TestName"), xRow->getString(xColumnLocate->findColumn("TestName")));
 
     closeDocument(uno::Reference<lang::XComponent>(xDocument, uno::UNO_QUERY));
 }
